--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,14 @@
     "permissions": [
       "tabs",
       "activeTab",
-      "storage"
+      "storage",
+      "scripting"
     ],
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["contentScript.js"]
+        "js": ["./contentScript.js"],
+        "run_at": "document_start"
       }
     ],
     "action": {
